--- a/OpenBudgeteer.Blazor/OpenBudgeteer.Blazor.csproj
+++ b/OpenBudgeteer.Blazor/OpenBudgeteer.Blazor.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="ChartJs.Blazor" Version="1.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="Tewr.Blazor.FileReader" Version="3.3.1.21360" />
   </ItemGroup>
 
